# markdown-converter

./: .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXPORT_FIX_SUMMARY.md  GEMINI.md  IMPROVEMENT_PLAN.md  LICENSE  README.latex  README.md  UPDATES.md  components.json  eslint.config.js  jest.config.js  package-lock.json  package.json  push-to-github.sh  repo-map.md  setup-upstream.sh  tailwind.config.js  test-double-click.md  test-export-functionality.js  test-export.md  test-file-open.md  test.md  vite.renderer.config.ts  vitest.config.ts
.claude/: settings.local.json
.security-hardening/: 01-vulnerability-scan.md  02-threat-model.md  state.json
assets/: icon.icns
docs/: TAURI_BUILD_INSTRUCTIONS.md  THREAT_MODEL.md
scripts/: README.md  build-icon-icns.js  create-selfsigned-cert.ps1  download-tools.js  generate-icons.js  install-context-menu.bat  install-context-menu.ps1  install-context-menu.reg  nsis-installer.nsh  publish-concreteinfo.js  uninstall-context-menu.bat  uninstall-context-menu.reg  verify-open-export.mjs
src/: ascii-generator.html  command-palette.js  fonts.css  index.html  main.js  preload.js  print-preview.js  renderer.js  styles-concreteinfo.css  styles-modern.css  styles.css  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/plugins/writing-studio/: manifest.json
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  pdf_ops.rs  plugin_manager.rs  tray.rs
src-tauri/src/commands/: app.rs  dialog.rs  export.rs  file.rs  git.rs  mod.rs  pdf.rs  plugins.rs
(+333 files in other folders)
