[package]
name = "markdown-converter"
version = "4.3.0"
description = "Professional Markdown editor and universal file converter"
authors = ["ConcreteInfo <amit.wh@gmail.com>"]
edition = "2021"

[lib]
name = "markdown_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
git2 = "0.19"
log = "0.4"
walkdir = "2"
dirs = "5"
chrono = "0.4"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
